# blueprint

./: .bazelignore  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
example/: BUILD.bazel  hello.go
examplelib/: BUILD  lib.go
examplelib2/: BUILD.bazel  lib2.go
grpcex/client/: BUILD  greeterclient.go
grpcex/proto/: BUILD  helloworld.proto
grpcex/server/: BUILD  greeterserver.go
macros/: go_image.bzl
macros/webjsgazelle/: README.md  jest_test.bzl  ts_project.bzl
protoex/: BUILD  cat.proto
web/admin/: README.md
web/app/: BUILD.bazel  README.md  package.json
web/app/pages/: BUILD.bazel  index.tsx
web/app/public/: BUILD.bazel
web/app/styles/: BUILD.bazel
