load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hello",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "example_lib",
    srcs = ["hello.go"],
    importpath = "sage/example",
    visibility = ["//visibility:private"],
    deps = ["//examplelib2"],
)
